--- a/app/src/main/res/layout/activity_cafe_single.xml
+++ b/app/src/main/res/layout/activity_cafe_single.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
-            app:expandedTitleMargin="@dimen/activity_horizontal_margin"
+            app:expandedTitleMargin="@dimen/pad_marg_16"
             app:expandedTitleMarginBottom="@dimen/expanded_toolbar_title_margin_bottom"
             app:expandedTitleTextAppearance="@style/ExpandedTitleTextAppearance"
             app:layout_scrollFlags="scroll"
@@ -52,8 +52,8 @@
                     android:elevation="@dimen/app_bar_elevation"
                     android:orientation="vertical"
                     android:paddingBottom="@dimen/material_layout_keylines_screen_edge_margin"
-                    android:paddingLeft="@dimen/activity_horizontal_margin"
-                    android:paddingRight="@dimen/activity_horizontal_margin"
+                    android:paddingLeft="@dimen/pad_marg_16"
+                    android:paddingRight="@dimen/pad_marg_16"
                     android:paddingTop="@dimen/material_layout_keylines_screen_edge_margin">
 
                     <TextView
@@ -73,7 +73,7 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:contentInsetStart="@dimen/activity_horizontal_margin"
+                app:contentInsetStart="@dimen/pad_marg_16"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
@@ -93,7 +93,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/activity_vertical_margin"
+            android:layout_margin="@dimen/pad_marg_16"
             android:orientation="vertical">
 
             <TextView
@@ -102,7 +102,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:lineSpacingExtra="12sp"
-                android:padding="@dimen/activity_vertical_margin"
+                android:padding="@dimen/pad_marg_16"
                 android:text="@string/listTitle1"
                 android:textColor="@color/colorAccent"
                 android:textSize="20sp" />
@@ -111,22 +111,22 @@
                 android:id="@+id/listView1"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/activity_vertical_margin"
-                android:paddingRight="@dimen/activity_vertical_margin"></ListView>
+                android:paddingLeft="@dimen/pad_marg_16"
+                android:paddingRight="@dimen/pad_marg_16"></ListView>
 
-            <Button
+            <android.support.v7.widget.AppCompatButton
                 android:id="@+id/button_map"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:layout_marginBottom="@dimen/pad_marg_16"
+                android:layout_marginTop="@dimen/pad_marg_16"
                 android:background="@color/colorAccent"
                 android:drawableLeft="@drawable/ic_arrow_back_w"
                 android:drawableRight="@drawable/ic_near_me"
                 android:gravity="center"
                 android:onClick="showMap"
-                android:paddingLeft="@dimen/cast_expanded_controller_control_button_margin"
-                android:paddingRight="@dimen/cast_expanded_controller_control_button_margin"
+                android:paddingLeft="@dimen/pad_marg_16"
+                android:paddingRight="@dimen/pad_marg_16"
                 android:text="@string/cafe_map"
                 android:textColor="@color/white" />
 
@@ -135,7 +135,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:lineSpacingExtra="12sp"
-                android:padding="@dimen/activity_vertical_margin"
+                android:padding="@dimen/pad_marg_16"
                 android:textColor="@color/textColor"
                 android:textSize="15sp" />
 
@@ -145,7 +145,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:lineSpacingExtra="12sp"
-                android:padding="@dimen/activity_vertical_margin"
+                android:padding="@dimen/pad_marg_16"
                 android:text="@string/listTitle2"
                 android:textColor="@color/colorAccent"
                 android:textSize="20sp" />
@@ -155,9 +155,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="right"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_vertical_margin"
-                android:paddingRight="@dimen/activity_vertical_margin"></ListView>
+                android:layout_marginBottom="@dimen/pad_marg_16"
+                android:paddingLeft="@dimen/pad_marg_16"
+                android:paddingRight="@dimen/pad_marg_16"></ListView>
 
             <TextView
                 android:id="@+id/listTitle3"
@@ -165,7 +165,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:lineSpacingExtra="12sp"
-                android:padding="@dimen/activity_vertical_margin"
+                android:padding="@dimen/pad_marg_16"
                 android:text="@string/listTitle3"
                 android:textColor="@color/colorAccent"
                 android:textSize="20sp" />
@@ -175,9 +175,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="right"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_vertical_margin"
-                android:paddingRight="@dimen/activity_vertical_margin"></ListView>
+                android:layout_marginBottom="@dimen/pad_marg_16"
+                android:paddingLeft="@dimen/pad_marg_16"
+                android:paddingRight="@dimen/pad_marg_16"></ListView>
 
             <TextView
                 android:id="@+id/listTitle4"
@@ -185,7 +185,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:lineSpacingExtra="12sp"
-                android:padding="@dimen/activity_vertical_margin"
+                android:padding="@dimen/pad_marg_16"
                 android:text="@string/listTitle4"
                 android:textColor="@color/colorAccent"
                 android:textSize="20sp" />
@@ -195,9 +195,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="right"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_vertical_margin"
-                android:paddingRight="@dimen/activity_vertical_margin"></ListView>
+                android:layout_marginBottom="@dimen/pad_marg_16"
+                android:paddingLeft="@dimen/pad_marg_16"
+                android:paddingRight="@dimen/pad_marg_16"></ListView>
 
             <TextView
                 android:id="@+id/listTitle5"
@@ -205,7 +205,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:lineSpacingExtra="12sp"
-                android:padding="@dimen/activity_vertical_margin"
+                android:padding="@dimen/pad_marg_16"
                 android:text="@string/listTitle5"
                 android:textColor="@color/colorAccent"
                 android:textSize="20sp" />
@@ -215,17 +215,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="right"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_vertical_margin"
-                android:paddingRight="@dimen/activity_vertical_margin"></ListView>
+                android:layout_marginBottom="@dimen/pad_marg_16"
+                android:paddingLeft="@dimen/pad_marg_16"
+                android:paddingRight="@dimen/pad_marg_16"></ListView>
 
             <TextView
                 android:id="@+id/description"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:layout_marginBottom="@dimen/pad_marg_16"
                 android:lineSpacingExtra="12sp"
-                android:padding="@dimen/activity_vertical_margin"
+                android:padding="@dimen/pad_marg_16"
                 android:textColor="@color/textColor"
                 android:textSize="15sp" />
 
