--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,9 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"
+
     tools:context="com.faragostaresh.cafeyab.LoginActivity">
 
-    <ScrollView
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorPrimary">
@@ -22,14 +26,14 @@
                 android:layout_width="192dp"
                 android:layout_height="192dp"
                 android:layout_gravity="center"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:src="@drawable/logo2" />
+                android:paddingBottom="@dimen/pad_marg_16"
+                android:paddingTop="@dimen/pad_marg_16"
+                android:src="@drawable/logo" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/activity_vertical_margin"
+                android:layout_margin="@dimen/pad_marg_16"
                 android:orientation="vertical">
 
                 <!--  Email Label -->
@@ -37,9 +41,9 @@
                     android:id="@+id/userEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
-                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                    android:layout_marginRight="@dimen/activity_horizontal_margin"
+                    android:layout_marginBottom="@dimen/pad_marg_16"
+                    android:layout_marginLeft="@dimen/pad_marg_16"
+                    android:layout_marginRight="@dimen/pad_marg_16"
                     android:layout_marginTop="40dp"
                     android:textColor="@color/white"
                     android:textColorHint="@color/white">
@@ -60,7 +64,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/userEmail"
-                    android:layout_margin="@dimen/activity_horizontal_margin"
+                    android:layout_margin="@dimen/pad_marg_16"
                     android:textColor="@color/white"
                     android:textColorHint="@color/white">
 
@@ -81,8 +85,8 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/userPassword"
                     android:layout_marginBottom="24dp"
-                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                    android:layout_marginRight="@dimen/activity_horizontal_margin"
+                    android:layout_marginLeft="@dimen/pad_marg_16"
+                    android:layout_marginRight="@dimen/pad_marg_16"
                     android:layout_marginTop="24dp"
                     android:padding="12dp"
                     android:text="@string/login" />
@@ -92,17 +96,28 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/btn_login"
-                    android:layout_marginBottom="24dp"
-                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                    android:layout_marginRight="@dimen/activity_horizontal_margin"
-                    android:layout_marginTop="@dimen/activity_horizontal_margin"
+                    android:layout_margin="@dimen/pad_marg_16"
                     android:gravity="center"
                     android:text="@string/register"
                     android:textColor="@color/white"
                     android:textSize="20dp" />
 
+                <TextView
+                    android:id="@+id/link_forget"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/btn_login"
+                    android:layout_marginBottom="24dp"
+                    android:layout_marginLeft="@dimen/pad_marg_16"
+                    android:layout_marginRight="@dimen/pad_marg_16"
+                    android:layout_marginTop="@dimen/pad_marg_16"
+                    android:gravity="center"
+                    android:text="@string/forget"
+                    android:textColor="@color/white"
+                    android:textSize="20dp" />
+
             </LinearLayout>
         </LinearLayout>
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
 
 </android.support.design.widget.CoordinatorLayout>
