--- a/app/src/main/res/layout/activity_video_single.xml
+++ b/app/src/main/res/layout/activity_video_single.xml
@@ -22,7 +22,7 @@
             android:layout_margin="@dimen/fab_margin"
             android:src="@drawable/ic_share" />
 
-        <ScrollView
+        <android.support.v4.widget.NestedScrollView
             android:id="@+id/mainScrollView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -49,7 +49,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="right"
                     android:lineSpacingExtra="12sp"
-                    android:padding="@dimen/activity_vertical_margin"
+                    android:padding="@dimen/pad_marg_16"
                     android:text="full screen"
                     android:textSize="20sp" /> -->
 
@@ -63,7 +63,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_alignParentStart="true"
                     android:layout_marginTop="0dp"
-                    android:padding="@dimen/activity_vertical_margin" /> -->
+                    android:padding="@dimen/pad_marg_16" /> -->
 
                 <TextView
                     android:id="@+id/viewTitle"
@@ -71,7 +71,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="right"
                     android:lineSpacingExtra="12sp"
-                    android:padding="@dimen/activity_vertical_margin"
+                    android:padding="@dimen/pad_marg_16"
                     android:textSize="20sp" />
 
                 <TextView
@@ -79,7 +79,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:lineSpacingExtra="12sp"
-                    android:padding="@dimen/activity_vertical_margin"
+                    android:padding="@dimen/pad_marg_16"
                     android:textColor="@color/textColor"
                     android:textSize="15sp" />
 
@@ -87,9 +87,9 @@
                     android:id="@+id/description"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginBottom="@dimen/activity_vertical_margin"
+                    android:layout_marginBottom="@dimen/pad_marg_16"
                     android:lineSpacingExtra="12sp"
-                    android:padding="@dimen/activity_vertical_margin"
+                    android:padding="@dimen/pad_marg_16"
                     android:textColor="@color/textColor"
                     android:textSize="15sp" />
 
@@ -99,7 +99,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
                     android:lineSpacingExtra="12sp"
-                    android:padding="@dimen/activity_vertical_margin"
+                    android:padding="@dimen/pad_marg_16"
                     android:text="@string/relatedVideos"
                     android:textColor="@color/colorAccent"
                     android:textSize="20sp" />
@@ -117,7 +117,7 @@
 
                 </LinearLayout>
             </LinearLayout>
-        </ScrollView>
+        </android.support.v4.widget.NestedScrollView>
 
     </FrameLayout>
 </LinearLayout>
