--- a/app/src/main/res/layout/list_horizontal_item.xml
+++ b/app/src/main/res/layout/list_horizontal_item.xml
@@ -26,7 +26,7 @@
             android:textColor="@android:color/black"
             android:textSize="18sp" />
 
-        <Button
+        <android.support.v7.widget.AppCompatButton
             android:id="@+id/btnMore"
             android:layout_width="wrap_content"
             android:layout_height="42dp"
