--- a/app/src/main/res/layout/list_row_cafe.xml
+++ b/app/src/main/res/layout/list_row_cafe.xml
@@ -6,7 +6,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/activity_vertical_margin">
+        android:layout_margin="@dimen/pad_marg_16">
 
         <com.android.volley.toolbox.NetworkImageView
             android:id="@+id/thumbnail"
