--- a/app/src/main/res/layout/list_row_cafe_attributes.xml
+++ b/app/src/main/res/layout/list_row_cafe_attributes.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:textColor="@color/textColor"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingTop="@dimen/pad_marg_16"
+    android:paddingBottom="@dimen/pad_marg_16"
     android:textSize="16sp" >
 </TextView>
