--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,11 +1,18 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
-    <dimen name="pad_marg_all">8dp</dimen>
+
+    <dimen name="pad_marg_4">4dp</dimen>
+    <dimen name="pad_marg_8">8dp</dimen>
+    <dimen name="pad_marg_16">16dp</dimen>
+    <dimen name="pad_marg_32">32dp</dimen>
+    <dimen name="pad_marg_48">48dp</dimen>
+    <dimen name="pad_marg_64">64dp</dimen>
+
+    <dimen name="button_size">180dp</dimen>
+    <dimen name="button_radius">4dp</dimen>
 
     <!-- Main page image -->
     <dimen name="detail_backdrop_height">200dp</dimen>
