--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -39,9 +39,7 @@
                     android:layout_gravity="center"
                     android:paddingBottom="@dimen/pad_marg_16"
                     android:paddingTop="110dp"
-                    android:src="@drawable/logo"
-                    app:civ_border_color="@color/iron"
-                    app:civ_border_width="1dp" />
+                    android:src="@drawable/logo" />
 
                 <TextView
                     android:id="@+id/aboutName"
@@ -160,9 +158,7 @@
                             android:id="@+id/faragostareshLogo"
                             android:layout_width="64dp"
                             android:layout_height="64dp"
-                            android:src="@drawable/faragostaresh"
-                            app:civ_border_color="@color/iron"
-                            app:civ_border_width="1dp" />
+                            android:src="@drawable/faragostaresh"/>
 
                         <TextView
                             android:id="@+id/faragostareshCopyright"
