--- a/app/src/main/res/layout/activity_event_single.xml
+++ b/app/src/main/res/layout/activity_event_single.xml
@@ -121,7 +121,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:lineSpacingExtra="12sp"
-                android:textColor="@color/textColor"
+                android:textColor="@color/colorText"
                 android:padding="@dimen/pad_marg_16"
                 android:textSize="15sp" />
 
@@ -130,7 +130,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:lineSpacingExtra="12sp"
-                android:textColor="@color/textColor"
+                android:textColor="@color/colorText"
                 android:padding="@dimen/pad_marg_16"
                 android:layout_marginBottom="@dimen/pad_marg_16"
                 android:textSize="15sp" />
@@ -151,7 +151,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:lineSpacingExtra="12sp"
-                android:textColor="@color/textColor"
+                android:textColor="@color/colorText"
                 android:padding="@dimen/pad_marg_16"
                 android:layout_marginBottom="@dimen/pad_marg_16"
                 android:textSize="15sp" />
