--- a/app/src/main/res/layout/activity_main1.xml
+++ b/app/src/main/res/layout/activity_main1.xml
@@ -20,8 +20,8 @@
             android:fitsSystemWindows="true"
             app:expandedTitleMargin="@dimen/pad_marg_16"
             app:expandedTitleMarginBottom="@dimen/expanded_toolbar_title_margin_bottom"
-            app:layout_scrollFlags="scroll"
             app:expandedTitleTextAppearance="@style/ExpandedTitleTextAppearance"
+            app:layout_scrollFlags="scroll"
             app:toolbarId="@+id/toolbar">
 
             <FrameLayout
@@ -57,15 +57,15 @@
 
                     <TextView
                         android:id="@+id/search"
-                        android:drawableLeft="@drawable/ic_arrow_back"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/background_search"
+                        android:drawableLeft="@drawable/ic_arrow_back"
+                        android:drawableRight="@drawable/ic_search"
                         android:gravity="center_vertical"
                         android:includeFontPadding="true"
                         android:padding="@dimen/pad_marg_16"
                         android:text="@string/backdrop_search"
-                        android:drawableRight="@drawable/ic_search"
                         android:textColor="@color/jet" />
 
                     <!-- <EditText
@@ -123,18 +123,19 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <!-- <LinearLayout
+            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/card_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"> -->
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/pad_marg_16"
+                card_view:cardCornerRadius="4dp">
 
                 <RelativeLayout
                     android:id="@+id/user_bar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/background_box"
-                    android:layout_margin="@dimen/pad_marg_16"
-                    android:padding="5dp">
+                    android:padding="@dimen/pad_marg_4">
 
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/user_avatar"
@@ -164,17 +165,17 @@
 
                 </RelativeLayout>
 
-                <com.faragostaresh.adaptor.MyGridView
-                    android:id="@+id/gridview"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/colorGarry400"
-                    android:horizontalSpacing="1dp"
-                    android:numColumns="3"
-                    android:stretchMode="columnWidth"
-                    android:verticalSpacing="1dp" />
+            </android.support.v7.widget.CardView>
 
-            <!-- </LinearLayout> -->
+            <com.faragostaresh.adaptor.MyGridView
+                android:id="@+id/gridview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorGarry400"
+                android:horizontalSpacing="1dp"
+                android:numColumns="3"
+                android:stretchMode="columnWidth"
+                android:verticalSpacing="1dp" />
 
             <!-- <LinearLayout
                 android:layout_width="match_parent"
@@ -206,9 +207,9 @@
         app:layout_anchorGravity="bottom|end" />
 
     <com.ashokvarma.bottomnavigation.BottomNavigationBar
-        android:layout_gravity="bottom"
         android:id="@+id/bottom_navigation_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom" />
 
 </android.support.design.widget.CoordinatorLayout>
