--- a/app/src/main/res/layout/activity_news_single.xml
+++ b/app/src/main/res/layout/activity_news_single.xml
@@ -101,7 +101,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:lineSpacingExtra="12sp"
-                android:textColor="@color/textColor"
+                android:textColor="@color/colorText"
                 android:padding="@dimen/pad_marg_16"
                 android:textSize="15sp" />
 
@@ -110,7 +110,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:lineSpacingExtra="12sp"
-                android:textColor="@color/textColor"
+                android:textColor="@color/colorText"
                 android:padding="@dimen/pad_marg_16"
                 android:layout_marginBottom="@dimen/pad_marg_16"
                 android:textSize="15sp" />
