--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,5 +4,4 @@
     android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SplashActivity">
-</android.support.design.widget.CoordinatorLayout>
+    tools:context=".SplashActivity"></android.support.design.widget.CoordinatorLayout>
