--- a/app/src/main/res/layout/activity_video_single.xml
+++ b/app/src/main/res/layout/activity_video_single.xml
@@ -80,7 +80,7 @@
                     android:layout_height="match_parent"
                     android:lineSpacingExtra="12sp"
                     android:padding="@dimen/pad_marg_16"
-                    android:textColor="@color/textColor"
+                    android:textColor="@color/colorText"
                     android:textSize="15sp" />
 
                 <TextView
@@ -90,7 +90,7 @@
                     android:layout_marginBottom="@dimen/pad_marg_16"
                     android:lineSpacingExtra="12sp"
                     android:padding="@dimen/pad_marg_16"
-                    android:textColor="@color/textColor"
+                    android:textColor="@color/colorText"
                     android:textSize="15sp" />
 
                 <TextView
