--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,13 +6,15 @@
     <color name="colorAccent">#9B0606</color>
 
     <color name="colorBackground">#f5f5f5</color>
+    <color name="colorGarry200">#eeeeee</color>
+    <color name="colorGarry300">#e0e0e0</color>
     <color name="colorGarry400">#bdbdbd</color>
+    <color name="colorGarry500">#9e9e9e</color>
     <color name="colorGarry700">#616161</color>
     <color name="colorText">#616161</color>
     <color name="colorBrown50">#efebe9</color>
     <color name="colorBrown100">#d7ccc8</color>
     <color name="colorBrown300">#a1887f</color>
-    <color name="textColor">#616161</color>
 
     <color name="background_material_light">#efebe9</color>
 
